--- a/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
@@ -23,27 +23,27 @@
             <OnPlatform x:TypeArguments="x:String" 
                         x:Key="FontAwesomeBrands">
                 <On Platform="Android" 
-                    Value="FontAwesome5Brands.otf#Regular" />
+                    Value="FontAwesome5Brands.otf##Font Awesome 5 Free" />
                 <On Platform="iOS" 
                     Value="FontAwesome5Brands-Regular" />
                 <On Platform="UWP" 
-                    Value="/Assets/fa-solid-900.ttf" />
+                    Value="/Assets/fa-solid-900.ttf#Font Awesome 5 Free" />
             </OnPlatform> 
     
             <OnPlatform x:TypeArguments="x:String" 
                         x:Key="FontAwesomeSolid"> 
                 <On Platform="Android" 
-                    Value="FontAwesome5Solid.otf#Regular" /> 
+                    Value="FontAwesome5Solid.otf##Font Awesome 5 Free" /> 
                 <On Platform="iOS" 
                     Value="FontAwesome5Free-Solid" /> 
                 <On Platform="UWP" 
-                    Value="/Assets/fa-solid-900.ttf" /> 
+                    Value="/Assets/fa-solid-900.ttf#Font Awesome 5 Free" /> 
             </OnPlatform> 
     
             <OnPlatform x:TypeArguments="x:String" 
                         x:Key="FontAwesomeRegular">
                 <On Platform="Android" 
-                    Value="FontAwesome5Regular.otf#Regular" /> 
+                    Value="fa-solid-900.ttf#Font Awesome 5 Free Regular" /> 
                 <On Platform="iOS" 
                     Value="FontAwesome5Free-Regular" /> 
                 <On Platform="UWP" 
