The first version of the Settings page is complete. Implemented renderer to close Navigation children from the currently active tabbed page, by clicking the tab icon at the bottom.

--- a/Healthcare020.Mobile/Healthcare020.Mobile/Themes/LightTheme.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/Themes/LightTheme.xaml
@@ -33,15 +33,27 @@
     <OnPlatform x:Key="FontIcons" x:TypeArguments="x:String">
         <OnPlatform.Platforms>
             <On Platform="Android" Value="UIFontIcons.ttf#UIFontIcons" />
-            <On Platform="iOS" Value="UIFontIcons" />
             <On Platform="UWP" Value="Assets/UIFontIcons.ttf#UIFontIcons" />
+        </OnPlatform.Platforms>
+    </OnPlatform>
+
+    <OnPlatform x:Key="Montserrat-Thin" x:TypeArguments="x:String">
+        <OnPlatform.Platforms>
+            <On Platform="Android" Value="Montserrat-Thin.ttf#Montserrat-Thin" />
+            <On Platform="UWP" Value="Assets/Montserrat-Thin.ttf#Montserrat-Thin" />
+        </OnPlatform.Platforms>
+    </OnPlatform>
+
+    <OnPlatform x:Key="Montserrat-Light" x:TypeArguments="x:String">
+        <OnPlatform.Platforms>
+            <On Platform="Android" Value="Montserrat-Light.ttf#Montserrat-Light" />
+            <On Platform="UWP" Value="Assets/Montserrat-Light.ttf#Montserrat-Light" />
         </OnPlatform.Platforms>
     </OnPlatform>
 
     <OnPlatform x:Key="Montserrat-SemiBold" x:TypeArguments="x:String">
         <OnPlatform.Platforms>
             <On Platform="Android" Value="Montserrat-SemiBold.ttf#Montserrat-SemiBold" />
-            <On Platform="iOS" Value="Montserrat-SemiBold" />
             <On Platform="UWP" Value="Assets/Montserrat-SemiBold.ttf#Montserrat-SemiBold" />
         </OnPlatform.Platforms>
     </OnPlatform>
@@ -49,7 +61,6 @@
     <OnPlatform x:Key="Montserrat-Regular" x:TypeArguments="x:String">
         <OnPlatform.Platforms>
             <On Platform="Android" Value="Montserrat-Regular.ttf#Montserrat-Regular" />
-            <On Platform="iOS" Value="Montserrat-Regular" />
             <On Platform="UWP" Value="Assets/Montserrat-Regular.ttf#Montserrat-Regular" />
         </OnPlatform.Platforms>
     </OnPlatform>
@@ -57,7 +68,6 @@
     <OnPlatform x:Key="Montserrat-Medium" x:TypeArguments="x:String">
         <OnPlatform.Platforms>
             <On Platform="Android" Value="Montserrat-Medium.ttf#Montserrat-Medium" />
-            <On Platform="iOS" Value="Montserrat-Medium" />
             <On Platform="UWP" Value="Assets/Montserrat-Medium.ttf#Montserrat-Medium" />
         </OnPlatform.Platforms>
     </OnPlatform>
@@ -65,7 +75,6 @@
     <OnPlatform x:Key="Montserrat-Bold" x:TypeArguments="x:String">
         <OnPlatform.Platforms>
             <On Platform="Android" Value="Montserrat-Bold.ttf#Montserrat-Bold" />
-            <On Platform="iOS" Value="Montserrat-Bold" />
             <On Platform="UWP" Value="Assets/Montserrat-Bold.ttf#Montserrat-Bold" />
         </OnPlatform.Platforms>
     </OnPlatform>
