--- a/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
+++ b/Healthcare020.Mobile/Healthcare020.Mobile/App.xaml
@@ -15,18 +15,36 @@
             <!--Global Styles-->
 
             <Color x:Key="CustomBlue">#536b80</Color>
+            <Color x:Key="CustomDarkBlue">#174c73</Color>
+            <Color x:Key="CustomDarkCyan">#0bbfbf</Color>
+            <Color x:Key="CustomNavyBlueDark">#0b2236</Color>
+            
             <Color x:Key="NavigationPrimary">#2196F3</Color>
             <Color x:Key="HealthcareCyan">#3ddbdb</Color>
-            <Color x:Key="LightSmokeWhite">#fcfcfc</Color>
+            <Color x:Key="LightSmokeWhite">#fafafa</Color>
+            <Color x:Key="LighterSmokeWhite">#fefefe</Color>
+            <Color x:Key="LightGray">#f7f7f7</Color>
+
+            
 
             <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationPrimary}" />
-                <Setter Property="BarTextColor" Value="White" />
+                <Setter Property="BarBackgroundColor" Value="{StaticResource CustomDarkCyan}" />
+                <Setter Property="BarTextColor" Value="{StaticResource CustomDarkBlue}" />
             </Style>
 
             <OnPlatform x:Key="FontSize-Medium" x:TypeArguments="x:Double">
-                <On Platform="UWP">15</On>
+                <On Platform="UWP">27</On>
                 <On Platform="Android">22</On>
+            </OnPlatform>
+
+            <OnPlatform x:Key="FontSize-Smaller" x:TypeArguments="x:Double">
+                <On Platform="UWP">17</On>
+                <On Platform="Android">12</On>
+            </OnPlatform>
+
+            <OnPlatform x:Key="FontSize-Large" x:TypeArguments="x:Double">
+                <On Platform="UWP">16</On>
+                <On Platform="Android">30</On>
             </OnPlatform>
 
             <OnPlatform x:TypeArguments="x:String"
@@ -37,13 +55,18 @@
                     Value="/Assets/fa-solid-900.ttf#Font Awesome 5 Free" />
             </OnPlatform>
 
-            <OnPlatform x:TypeArguments="x:String"
-                        x:Key="Montserrat-Thin">
-                <On Platform="Android"
-                    Value="Montserrat-Thin.ttf" />
-                <On Platform="UWP"
-                    Value="/Assets/Montserrat-Thin.ttf" />
-            </OnPlatform>
+            <Style TargetType="Button" x:Key="CustomButtonStyle">
+                <Setter Property="ContentLayout">Left,0</Setter>
+                <Setter Property="BackgroundColor" Value="{StaticResource CustomBlue}"></Setter>
+                <Setter Property="TextColor">WhiteSmoke</Setter>
+                <Setter Property="CornerRadius">15</Setter>
+                <Setter Property="FontFamily" Value="{StaticResource Montserrat-Regular}"></Setter>
+                <Setter Property="VerticalOptions">FillAndExpand</Setter>
+                <Setter Property="HorizontalOptions">FillAndExpand</Setter>
+                <Setter Property="HeightRequest">60</Setter>
+                <Setter Property="FontSize" Value="{StaticResource FontSize-Medium}"></Setter>
+                <Setter Property="Margin">15,10,15,10</Setter>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
